--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-style: italic; /* All text will now appear italic */
       margin: 0;
       padding: 0;
       background-color: #f5f5f5;
@@ -132,6 +133,50 @@
       border-radius: 10px;
       object-fit: cover;
     }
+
+    /* Media Queries for responsiveness */
+    @media (max-width: 768px) {
+      .side-by-side-images {
+        flex-direction: column;
+      }
+
+      .side-by-side-images img {
+        width: 100%;
+        height: auto;
+      }
+
+      .slim-images-row {
+        flex-direction: column;
+      }
+
+      .slim-images-row img {
+        width: 100%;
+        height: auto;
+      }
+
+      .side-image-text {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .side-image-text img {
+        width: 100%;
+        margin-bottom: 15px;
+      }
+
+      .side-image-text p {
+        width: 100%;
+      }
+
+      .smaller-side-by-side {
+        flex-direction: column;
+      }
+
+      .smaller-side-by-side img {
+        width: 100%;
+        margin-bottom: 15px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -245,6 +290,7 @@
 
     <div>
       <h1>Pinterest Inspired</h1>
+
       <!-- Slim images in a row -->
       <div class="slim-images-row">
         <img src="firth1.jpeg" alt="Design 1">
@@ -258,9 +304,8 @@
         <p>This house will be built in Venda. The fact that the location is expected to be rural shows that modern houses are not only built in the suburbs.</p>
         <img src="firth4.jpeg" alt="Venda House Design">
       </div>
-     
-   
     </div>
   </div>
 </body>
 </html>
+
